# dcase2020_task5

./: .gitignore  LICENSE  README.md  README.rst  default.conf  pyproject.toml  requirements.txt
scripts/: download_dataset.sh  evaluate.sh  run.sh  w1024_max.conf  w1024_pseudo.conf  w2048_max.conf  w2048_pseudo.conf
task5/: cli.py  extract.py  predict.py  relabel.py  train.py  utils.py
task5/core/: dataloader.py  dataset.py  features.py  mask.py  metrics.py  sonyc_ust.py
task5/pytorch/: data.py  logging.py  models.py  qkcnn.py  specaug.py  training.py
