[tool.poetry]
name = "dcase2020_task5"
version = "0.1.0"
description = "Surrey CVSSP DCASE 2020 Task 5 system"
authors = ["Turab Iqbal <t.iqbal@surrey.ac.uk>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.6"
h5py = "^2.10"
librosa = "^0.7.2"
numpy = "^1.17"
oyaml = "^0.9"
pandas = "^0.25.3"
scikit-learn = "^0.21.3"
tqdm = "^4.37"
torch = "1.4.0"
tensorboard = "^2.2.1"
numba = "0.48"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
